--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>Attornatus</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Attornatus</name>
-	<description>Attornatus</description>
+	<description>Person API</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -67,6 +67,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 
 	</dependencies>
