--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ server.error.include-stacktrace=never
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 management.endpoints.web.exposure.include=*
+logging.file.name=appfile.log
